# MiniTrix

./: Makefile  README.md  README.txt  build.sh  deptree.sh  env.sh
carena/: ChangeLog  Makefile  Makefile.am  README  carena.am  configure.ac  times.txt
carena/headers/: Makefile.am  carena.h
carena/src/: Makefile.am  carena.c
carena/test/: Makefile.am  gracefulshutdown.c  simple.c  test.c  tests.c  testsend.c  testsendcli.c  testsendraw.c  testsendsrv.c  threeway.c
cinterp/: Makefile  Makefile.am  cinterp.am  configure.ac  part_template.am
cinterp/circuit/: AES  Makefile  Makefile~  TEST  ast.c  ast.h  grammar.lex  grammar.tab.c  grammar.y  interp  interp.c  interp.h~  lex.yy.c  main.c  y.tab.h
cinterp/headers/: ast.h  interp.h
cinterp/src/: Makefile.am  ast.c  grammar.lex  grammar.y  interp.c  main.c
cinterp/test/: Makefile.am
cminimacs/: Makefile  cminimacs.am  configure.ac  times.txt  variants.txt
cminimacs/headers/: Makefile.am  stats.h
cminimacs/headers/ass/: ass.h
cminimacs/headers/bedoza/: bedoza_mac.h
cminimacs/headers/minimacs/: bitwiseand_minimacs.h  bitwisemulpar2_minimacs.h  generic_minimacs.h  genericmulpar_minimacs.h  minimacs.h  minimacs_pre.h  minimacs_rep.h  symmetric_minimacs.h
cminimacs/headers/reedsolomon/: minimacs_bit_encoder.h  minimacs_combi_encoder.h  minimacs_enc_fft.h  reedsolomon.h
cminimacs/src/: Makefile.am  stats.c
cminimacs/src/bedoza/: bedoza_mac.c
cminimacs/src/minimacs/: Makefile.am  bitwiseand_minimacs.c  bitwiseandmulpar_minimacs.c  bitwisemulpar2_minimacs.c  generic_minimacs.c  genericmulpar_minimacs.c  genpre.c  lsrep.c  minimacs.c  minimacs_pre.c  minimacs_rep.c  symmetric_minimacs.c
cminimacs/src/reedsolomon/: Makefile.am  main.c  minimacs_bit_encoder.c  minimacs_bitfft_encoder.c  minimacs_combi_encoder.c  minimacs_enc_fft.c  reedsolomon.c
cminimacs/test/: Makefile.am  bdtmptest.c  bdttest.c  bitenctest.c  bitfftenctest.c  client.c  clientfft.c  combienctest.c  loadreps.c  manybdtmptest.c  mulpar2test.c  perf.c  perfcli.c  perfsrv.c  symclient.c  test.c  testbwmp2.c  testencoder.c  testfft.c  testminimacs.c  testsymminimacs.c
common/bch/: AUTHORS  README  configure.ac
common/bch/include/: Makefile.am
common/bch/linux/: linux.mak
common/bch/src/: Makefile.am  bch.c
common/bch/test/: Makefile.am
common/carena/: README  carena.am  configure.ac
common/carena/include/: carena.h
common/carena/src/: carena.c  carena2.c
common/carena/test/: Makefile.am  _test.c  gracefulshutdown.c  simple.c  test.c  tests.c  testsend.c  testsendcli.c  testsendraw.c  testsendsrv.c  threeway.c
common/carena/win64/: config.h
common/ds/: Makefile.am  README  configure.ac  ds.am
common/ds/include/: blockingqueue.h  hashmap.h
common/ds/src/: blockingqueue.c  hashmap.c  stats.c
common/ds/test/: Makefile.am  hashmaptest.c  statstest.c
common/encoding/: Makefile  Makefile.am  NEWS  README  configure.ac  encoding.am
common/encoding/test/: Makefile.am  test_take.c
common/utils/: ChangeLog  README  configure.ac  utils.am
common/utils/linux/: linux.mak
common/utils/src/: Makefile.am
common/utils/test/: Makefile.am  optionstest.c
ds/: Makefile  Makefile.am  configure.ac  ds.am  wipe.sh
ds/headers/: Makefile.am  hashmap.h  map.h  stats.h
ds/linux/: linux.mak
ds/src/: Makefile.am  blockingqueue.c  hashmap.c  map.c  stats.c
ds/test/: Makefile.am  hashmaptest.c  statstest.c
encoding/: Makefile  configure.ac  encoding.am  wipe.sh
encoding/headers/: Makefile.am
encoding/headers/encoding/: der.h  der1.h  hex.h  int.h
encoding/src/: Makefile.am
encoding/src/encoding/: der.c  hex.c  int.c
encoding/test/: Makefile.am
math/: ChangeLog  Makefile  Makefile.am  configure.ac  math.am
math/headers/: Makefile.am
math/headers/math/: fft.h  gf8.h  matrix.h  polynomial.h
math/linux/: linux.mak
math/src/: Makefile.am  ec.c  gf8.c  gf8calc.c
math/src/math/: fft.c  matrix.c  polynomial.c
math/test/: Makefile.am  ffttest.c
minitrix/caes/: caes.am  configure.ac
minitrix/caes/circuits/: AES.cir  tmp2.txt
minitrix/caes/src/: Makefile.am  caes.c  caesmp.c  caessym.c  main.c  mainbw.c  mainfft.c  manymulpar2bitfft.c  manyrun.c  monitor.c  mulpar2.c  mulpar2bit.c  mulpar2bitfft.c  mulpar2fft.c  mulpar2mxt.c  multibitwfftmulparrun.c  multibitwfftrun.c  multibitwrun.c  multifftrun.c  multirun.c  multirunand.c  multirunmul.c  start.c
minitrix/caes/test/: Makefile.am  monitor_cli.c
minitrix/cminimacs/: Makefile.am  cminimacs.am  configure.ac
minitrix/cminimacs/src/: Makefile.am
minitrix/cminimacs/test/: Makefile.am  bdtmptest.c  bdttest.c  bitenctest.c  bitfftenctest.c  client.c  clientfft.c  combienctest.c  loadreps.c  manybdtmptest.c  mulpar2test.c  perf.c  perfcli.c  (+9 more)
minitrix/math/: Makefile.am  configure.ac  math.am
minitrix/tinyot/: AUTHORS  configure.ac  tinyot.am
osal/: ChangeLog  Makefile  Makefile.am  configure.ac  osal.am  wipe.sh
osal/build_freebsd/: Makefile
osal/build_linux/: Makefile  configure.ac  osal.am  wipe.sh
osal/headers/: Makefile  Makefile.am  common.h  coo.h  linker.h  list.h  mutex.h  osal.h  semaphore.h  singlelinkedlist.h
osal/linux/: linux.mak
osal/linux_src/: Makefile.am  coo.c  mutex2.c  mutex3.c  osal.c
osal/posix_src/: Makefile.am  coo.c  mutex2.c  mutex3.c  osal.c
osal/src/: Makefile  Makefile.am  common.c  mutex.c  semaphore.c  singlelinkedlist.c  utf8string.c
osal/test/: Makefile  Makefile.am  mutextest.c  newcootest.c  opentest.c  singlelinkedlisttest.c  stack.c  stack.s  testoe.c  testoe.s  threadtest.c  utf8test.c
osal/winx64_src/: fs.c  mutex2.c  osal.c
platform/datetime/: Makefile.am  README  configure.ac  datetime.am
platform/osal/: Makefile.am  README  configure.ac  osal.am
tinyot/: Makefile  configure.ac  tinyot.am
tinyot/circuit/: AES_sorted.spaclc
tinyot/headers/: aes.h  tinyot.h
tinyot/src/: Makefile.am  aes.c  alice.c  bob.c  main.c  multirun.c  tinyot.c
tinyot/test/: Makefile.am
utils/: Makefile  Makefile.am  configure.ac  utils.am
utils/headers/: Makefile.am
utils/test/: Makefile.am  optionstest.c
(+185 files in other folders)
