nobase_include_HEADERS = ass/ass.h bedoza/bedoza_mac.h reedsolomon/reedsolomon.h\
	minimacs/minimacs.h minimacs/minimacs_rep.h minimacs/generic_minimacs.h reedsolomon/minimacs_enc_fft.h  minimacs/symmetric_minimacs.h minimacs/bitwiseand_minimacs.h minimacs/bitwiseandmulpar_minimacs.h minimacs/bitwisemulpar2_minimacs.h

