include $(top_srcdir)/osal.am

bin_PROGRAMS =  utf8test opentest threadtest mutextest testoe

testoe_SOURCES = testoe.c
testoe_LDADD = $(LIB_OSAL)

mutextest_SOURCES = mutextest.c
mutextest_LDADD = $(LIB_OSAL)

threadtest_SOURCES = threadtest.c
threadtest_LDADD = $(LIB_OSAL)

opentest_SOURCES = opentest.c
opentest_LDADD = $(LIB_OSAL)

test1_SOURCES = test1.c
test1_LDADD = $(LIB_OSAL)

utf8test_SOURCES = utf8test.c
utf8test_LDADD = $(LIB_OSAL)
