include $(top_srcdir)/cminimacs.am

noinst_LIBRARIES = libreedsolomon.a

libreedsolomon_a_SOURCES = reedsolomon.c minimacs_enc_fft.c minimacs_bit_encoder.c minimacs_combi_encoder.c

#bin_PROGRAMS = reedsolomon
#reedsolomon_SOURCES = main.c
#reedsolomon_LDADD = $(top_srcdir)/build/src/math/libminimacsmath.a libreedsolomon.a $(top_srcdir)/deps/mpclib/libmpc.a
